fix program templates

--- a/main/templates/main/program-mentors.html
+++ b/main/templates/main/program-mentors.html
@@ -10,7 +10,7 @@
                     <h1>Mentors</h1>
                     <div style="margin-bottom: 40px;"></div>
                     <div class="row">
-                        {% for mentor in mentors %}
+                        {% for mentor in mentors_list %}
                             <div class="col-md-4">
                                 <div class="program-main-mentor">
                                     <img src="{{ mentor.image }}" class="program-main-mentor-image" alt="mentor image">
