--- a/main/templates/main/program-teams.html
+++ b/main/templates/main/program-teams.html
@@ -10,7 +10,7 @@
                     <h1>Hosted Teams</h1>
                     <div style="margin-bottom: 40px;"></div>
                     <div class="row">
-                        {% for team in teams %}
+                        {% for team in teams_list %}
                             <div class="col-md-4 program-main-company">
                                 <div class="program-main-company-image">
                                     <a href="{{ team.link }}"><img src="{{ team.image }}" alt="{{ team.name }} logo"></a>
