update about hash links

--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -67,10 +67,10 @@
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">About <b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a tabindex="-1" href="{% url 'main:about' %}#collapse0">What we do</a></li>
-                        <li><a tabindex="-1" href="{% url 'main:about' %}#collapse1">How do we do it?</a></li>
-                        <li><a tabindex="-1" href="{% url 'main:about' %}#collapse2">How do I participate?</a></li>
-                        <li><a tabindex="-1" href="{% url 'main:about' %}#collapse3">Coworking space</a></li>
+                        <li><a tabindex="-1" href="{% url 'main:about' %}#what">What we do</a></li>
+                        <li><a tabindex="-1" href="{% url 'main:about' %}#how">How do we do it?</a></li>
+                        <li><a tabindex="-1" href="{% url 'main:about' %}#participate">How do I participate?</a></li>
+                        <li><a tabindex="-1" href="{% url 'main:about' %}#coworking">Coworking space</a></li>
                    </ul>
                 </li>
                 <li><a href="{% url 'main:program_teams' %}">Program</a></li>
