--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -48,6 +48,14 @@ h3 {
   box-shadow: rgba(255, 255, 255, 0.4) 0 0px 0, inset rgba(255, 255, 255, 0.4) 0 1px 0;
 }
 
+address {
+  margin-top: 57px;
+}
+
+address > abbr {
+  font-size: 22px;
+}
+
 .navbar {
   font-weight: 100;
   width: 90%;
