update meetup sidebar styling

--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -844,8 +844,7 @@ button.accordion.active:after {
 }
 
 .program-sidebar-meetup a:hover {
-  text-decoration: none;
-  color: #d82c20;
+  text-decoration: underline;
 }
 
 .program-sidebar-box {
