--- a/main/templates/main/events.html
+++ b/main/templates/main/events.html
@@ -36,6 +36,20 @@
                 {% endfor %}
             </div>
             <div class="col-md-3">
+                <div class="program-sidebar-meetup">
+                    <a href="{% url 'main:program_meetup' %}">
+                        <h4>
+                            OK!Thess Meetup
+                            <i class="glyphicon glyphicon-console"></i>
+                        </h4>
+                        <div class="program-sidebar-meetup-content">
+                            The meetup of OK!Thess is the new thing in town.
+                            Click here to learn more
+                        </div>
+                    </a>
+                </div>
+                <div style="margin-bottom: 30px;"></div>
+
                 <h3>Hosted Meetups</h3>
                 <div class="sidebar-module sidebar-module-inset sidebar-meetups">
                     <ul>
