change post image alignment

--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -579,8 +579,10 @@ h6.blog-post-meta {
 }
 
 .post-content-image {
-  float: right;
   width: 300px;
+  float: left;
+  padding-right: 20px;
+  padding-bottom: 20px;
 }
 
 /* events */
