user absolute urls for meta tags

--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -20,19 +20,19 @@
 
 	<meta itemprop="name" content="ΟΚ!Thess">
 	<meta itemprop="description" content="OK!Thess provides space and technical support to teams with innovative ideas.">
-	<meta itemprop="image" content="/img/thumb.png">
+	<meta itemprop="image" content="https://s3.eu-central-1.amazonaws.com/okthess-static/uploads/logo.png">
 
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@okthess">
 	<meta name="twitter:creator" content="@ntemposd">
 	<meta name="twitter:title" content="OK!Thess">
 	<meta name="twitter:description" content="OK!Thess provides space and technical support to teams with innovative ideas.">
-	<meta name="twitter:image" content="http://www.okthess.gr/img/thumb.png">
+	<meta name="twitter:image" content="https://s3.eu-central-1.amazonaws.com/okthess-static/uploads/logo.png">
 
 	<meta property="og:title" content="ΟΚ!Thess">
 	<meta property="og:description" content="OK!Thess provides space and technical support to teams with innovative ideas.">
 	<meta property="og:url" content="http://okthess.gr">
-	<meta property="og:image" content="/img/thumb.png">
+	<meta property="og:image" content="https://s3.eu-central-1.amazonaws.com/okthess-static/uploads/logo.png">
 	<meta property="og:type" content="website">
 
 	<link rel="stylesheet" href="{% static '/main/css/bootstrap.min.css' %}">
