add custom titles to all pages

--- a/main/templates/main/apply.html
+++ b/main/templates/main/apply.html
@@ -2,6 +2,8 @@
 
 {% load static %}
 
+{% block title %}Apply at OK!Thess{% endblock %}
+
 {% block content %}
     <section class="container apply">
         <div class="row">
