--- a/main/templates/main/blog-archive.html
+++ b/main/templates/main/blog-archive.html
@@ -2,6 +2,8 @@
 
 {% load static %}
 
+{% block title %}Posts from {{ archive_year }} | OK!Thess blog{% endblock %}
+
 {% block content %}
     <div class="container blog">
         <div class="row">
