--- a/main/templates/main/contact.html
+++ b/main/templates/main/contact.html
@@ -2,6 +2,8 @@
 
 {% load static %}
 
+{% block title %}Contact us | OK!Thess{% endblock %}
+
 {% block content %}
     <div class="container contact">
         <div class="row">
