--- a/main/templates/main/events.html
+++ b/main/templates/main/events.html
@@ -3,6 +3,8 @@
 {% load static %}
 {% load app_filters %}
 
+{% block title %}Events | OK!Thess{% endblock %}
+
 {% block content %}
     <div class="container-fluid events">
         <div class="row">
