--- a/main/templates/main/program-meetup.html
+++ b/main/templates/main/program-meetup.html
@@ -2,6 +2,8 @@
 
 {% load static %}
 
+{% block title %}The OK!Thess Meetup{% endblock %}
+
 {% block content %}
     <div class="container program">
         <div class="row">
