--- a/main/templates/main/program-mentors.html
+++ b/main/templates/main/program-mentors.html
@@ -2,6 +2,8 @@
 
 {% load static %}
 
+{% block title %}Mentors | OK!Thess{% endblock %}
+
 {% block content %}
     <div class="container program">
         <div class="row">
