--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -2,6 +2,8 @@
 
 {% load static %}
 
+{% block title %}About OK!Thess{% endblock %}
+
 {% block content %}
     <div class="container-fluid">
         <div class="row">
