--- a/main/templates/main/blog.html
+++ b/main/templates/main/blog.html
@@ -2,6 +2,8 @@
 
 {% load static %}
 
+{% block title %}The OK!Thess blog{% endblock %}
+
 {% block content %}
     <div class="container blog">
         <div class="row">
