--- a/main/templates/main/post.html
+++ b/main/templates/main/post.html
@@ -1,6 +1,33 @@
 {% extends 'main/layout.html' %}
 
 {% load static %}
+{% load i18n %}
+
+{% block title %}{{ post.title }} | OK!Thess blog{% endblock %}
+
+{% block og %}
+    {% get_current_language as LANGUAGE_CODE %}
+    <meta property="og:title" content="{{ post.title }} | OK!Thess blog">
+    <meta property="og:description" content="{{ post.teaser }}">
+    <meta property="og:url" content="{% url 'main:blog_post' post.slug %}">
+    <meta property="og:image" content="{{ post.image }}">
+    <meta property="og:type" content="article">
+    <meta property="article:published_time" content="2017-08-17T22:03:38+00:00">
+    <meta property="article:published_time" content="{{ post.date|date:"c" }}">
+    <meta property="og:site_name" content="OK!Thess">
+    <meta property="og:locale" content="{{ LANGUAGE_CODE }}">
+{% endblock %}
+
+{% block twitter %}
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@okthess">
+    <meta name="twitter:creator" content="@ntemposd">
+    <meta name="twitter:title" content="OK!Thess">
+    <meta name="twitter:description" content="OK!Thess provides space and technical support to teams with innovative ideas.">
+    <meta name="twitter:image" content="{{ post.image }}">
+    <meta name="twitter:text:title" content="{{ post.teaser }}">
+    <meta name="twitter:image:src" content="{{ post.image }}" />
+{% endblock %}
 
 {% block content %}
     <div class="container post">
