change itemprop to english

--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -18,7 +18,7 @@
 	<meta name="robots" content="NOODP">
 	<meta name="author" content="ntemposd">
 
-	<meta itemprop="name" content="ΟΚ!Thess">
+	<meta itemprop="name" content="OK!Thess">
 	<meta itemprop="description" content="OK!Thess provides space and technical support to teams with innovative ideas.">
 	<meta itemprop="image" content="https://s3.eu-central-1.amazonaws.com/okthess-static/uploads/logo.png">
 
