--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -1,5 +1,6 @@
 {% load static %}
 {% load i18n %}
+{% load app_filters %}
 
 <!DOCTYPE html>
 {% get_current_language as LANGUAGE_CODE %}
@@ -68,7 +69,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown">
+                <li class="dropdown {% active 'about' %}">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">About <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li><a tabindex="-1" href="{% url 'main:about' %}#what">What we do</a></li>
@@ -77,10 +78,10 @@
                         <li><a tabindex="-1" href="{% url 'main:about' %}#coworking">Coworking space</a></li>
                    </ul>
                 </li>
-                <li><a href="{% url 'main:program_teams' %}">Program</a></li>
-                <li><a href="{% url 'main:events' %}">Events</a></li>
-                <li><a href="{% url 'main:blog' %}">Blog</a></li>
-                <li><a href="{% url 'main:contact' %}">Contact</a></li>
+                <li class="{% active 'program' %}"><a href="{% url 'main:program_teams' %}">Program</a></li>
+                <li class="{% active 'event' %}"><a href="{% url 'main:events' %}">Events</a></li>
+                <li class="{% active 'blog' %}"><a href="{% url 'main:blog' %}">Blog</a></li>
+                <li class="{% active 'contact' %}"><a href="{% url 'main:contact' %}">Contact</a></li>
                 <li class="navbar-language">
                     {% csrf_token %}
                     <div class="hidden" id="current-language">{{ LANGUAGE_CODE }}</div>
