--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -600,6 +600,36 @@ h6.blog-post-meta {
   padding-bottom: 20px;
 }
 
+.post-content-body-meta {
+  clear: both;
+  padding-top: 20px;
+}
+
+/* blog:post:share */
+ul.share-buttons{
+  list-style: none;
+  padding: 0;
+}
+
+ul.share-buttons li{
+  display: inline;
+}
+
+ul.share-buttons .sr-only{
+  position: absolute;
+  clip: rect(1px 1px 1px 1px);
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0;
+  border: 0;
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+}
+
+ul.share-buttons img{
+  width: 32px;
+}
+
 /* events */
 .events {
   width: 90%;
