--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -55,6 +55,8 @@
 </head>
 
 <body>
+    {% block comments %}
+    {% endblock %}
     <nav class="navbar navbar-default">
         <div class="navbar-header">
             <a class="navbar-brand" href="{% url 'main:index' %}"><img src="{% static '/main/img/logo.png' %}" alt="Logo"></a>
